--- a/app/src/main/res/layout/product_row_listview.xml
+++ b/app/src/main/res/layout/product_row_listview.xml
@@ -8,20 +8,18 @@
     android:paddingRight="4dp"
     android:paddingTop="4dp">
 
-    <!-- 品名 -->
+
+    <TextView
+        android:id="@+id/textBarcode_productview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.4"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp" />
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textBarcode_productview"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.2"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp" />
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,6 +31,6 @@
             android:layout_weight="0.4"
             android:textColor="#FFFFFF"
             android:textSize="20sp" />
-
     </LinearLayout>
+
 </LinearLayout>
